fix:      A bug fix return column gap

--- a/src/components/sections/ProductGallery/product-gallery.scss
+++ b/src/components/sections/ProductGallery/product-gallery.scss
@@ -39,7 +39,7 @@
     grid-template-rows: var(--product-listing-row-height) auto;
     grid-template-columns: repeat(12, 1fr);
     row-gap: var(--fs-spacing-0);
-    column-gap: var(--fs-spacing-5);
+    column-gap: var(--fs-spacing-4);
     padding-right: var(--fs-grid-padding);
     padding-left: var(--fs-grid-padding);
   }
